--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,28 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/blogdb
+    url: jdbc:mysql://localhost:3306/blogdb?serverTimezone=Europe/Moscow&useLegacyDatetimeCode=false
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: pass
 
   jpa:
-    hibernate.ddl-auto: update
+    generate-ddl: false
+    hibernate:
+      ddl-auto: validate
     show-sql: true
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
+
+blog:
+  title: GalvanoBlog
+  subtitle: Записки гальванотехника
+  phone: +7 999 777-77-77
+  email: solshevskiy@gmail.com
+  copyright: Сергей Ольшевский
+  copyrightFrom: 2021
