--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     generate-ddl: false
     hibernate:
       ddl-auto: validate
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
@@ -26,3 +26,4 @@ blog:
   email: solshevskiy@gmail.com
   copyright: Сергей Ольшевский
   copyrightFrom: 2021
+  announceLength: 150
