--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   flyway:
     enabled: true
-    baseline-on-migrate: off
+    baseline-on-migrate: true
     locations: classpath:db/migration
 
 blog:
@@ -26,4 +26,5 @@ blog:
   email: solshevskiy@gmail.com
   copyright: Сергей Ольшевский
   copyrightFrom: 2021
-  announceLength: 150
+  post:
+    announceLength: 150
