--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<mapstruct-processor.version>1.4.2.Final</mapstruct-processor.version>
 		<lombok.version>1.18.22</lombok.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<com.github.cage.version>1.0</com.github.cage.version>
 		<maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
 	</properties>
 
@@ -96,6 +97,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-mapstruct-binding</artifactId>
 			<version>${lombok-mapstruct-binding.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.cage</groupId>
+			<artifactId>cage</artifactId>
+			<version>${com.github.cage.version}</version>
 		</dependency>
 	</dependencies>
 
