--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<org.springframework.security.version>5.6.2</org.springframework.security.version>
 		<flyway-core.version>8.4.2</flyway-core.version>
 		<flyway-mysql.version>8.4.2</flyway-mysql.version>
 		<flyway-maven-plugin.version>8.4.2</flyway-maven-plugin.version>
@@ -21,6 +22,7 @@
 		<lombok.version>1.18.22</lombok.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<com.github.cage.version>1.0</com.github.cage.version>
+		<javax.validation.version>2.0.1.Final</javax.validation.version>
 		<maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
 	</properties>
 
@@ -46,6 +48,21 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>${org.springframework.security.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -104,6 +121,13 @@
 			<artifactId>cage</artifactId>
 			<version>${com.github.cage.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${javax.validation.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
