Add endpoint edit profile, service upload image into the storage

--- a/impl/src/test/resources/application-test.yml
+++ b/impl/src/test/resources/application-test.yml
@@ -11,3 +11,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
+
+cloudinary-url: cloudinary://enter your cloudinary_url
+cloudinary-download-folder: test/
