--- a/impl/src/main/resources/application.yml
+++ b/impl/src/main/resources/application.yml
@@ -25,6 +25,14 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration
 
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 6MB
+      enabled: true
+  main:
+    allow-bean-definition-overriding: true
+
 blog:
   title: GalvanoBlog
   subtitle: Записки гальванотехника
@@ -56,3 +64,10 @@ swagger:
   schema-version: 1.0.0
   schema-description: Multi-module Spring Boot Project Blog Engine
   path: ${SWAGGER_PATH:http://localhost:8080}
+
+cloudinary:
+  url: ${CLOUDINARY_URL:cloudinary://enter your cloudinary_url}
+  download-folder: "upload/"
+  transformation:
+    width-image: 36
+    height-image: 36
