--- a/impl/src/test/resources/application-test.yml
+++ b/impl/src/test/resources/application-test.yml
@@ -12,5 +12,6 @@ spring:
     hibernate:
       ddl-auto: none
 
-cloudinary-url: cloudinary://enter your cloudinary_url
-cloudinary-download-folder: test/
+  mail:
+    username: sender@test.com
+    password: pass
