--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.3</version>
+		<version>3.3.3</version>
 	</parent>
 
 	<modules>
@@ -30,18 +30,18 @@
 		<changelist>-SNAPSHOT</changelist>
 
 		<!-- Project properties -->
-		<java.version>11</java.version>
+		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Spring Boot properties -->
-		<org.springframework.boot.version>2.6.3</org.springframework.boot.version>
-		<org.springframework.security.version>5.6.2</org.springframework.security.version>
+		<org.springframework.boot.version>3.3.3</org.springframework.boot.version>
+		<org.springframework.security.version>6.3.3</org.springframework.security.version>
 
 		<!-- Database properties -->
-		<flyway-core.version>8.4.2</flyway-core.version>
-		<flyway-mysql.version>8.4.2</flyway-mysql.version>
-		<mysql-connector-java.version>8.0.28</mysql-connector-java.version>
-		<org.testcontainers.version>1.16.3</org.testcontainers.version>
+		<flyway-core.version>10.18.0</flyway-core.version>
+		<flyway-mysql.version>10.18.0</flyway-mysql.version>
+		<mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+		<org.testcontainers.version>1.20.1</org.testcontainers.version>
 
 		<!-- Flyway properties -->
 		<flyway.driver>com.mysql.cj.jdbc.Driver</flyway.driver>
@@ -51,24 +51,24 @@
 		<flyway.password>pass</flyway.password>
 
 		<!-- External libraries properties -->
-		<mapstruct.version>1.4.2.Final</mapstruct.version>
-		<mapstruct-processor.version>1.4.2.Final</mapstruct-processor.version>
-		<lombok.version>1.18.22</lombok.version>
+		<mapstruct.version>1.6.0</mapstruct.version>
+		<mapstruct-processor.version>1.6.0</mapstruct-processor.version>
+		<lombok.version>1.18.34</lombok.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<com.github.cage.version>1.0</com.github.cage.version>
 		<javax.validation.version>2.0.1.Final</javax.validation.version>
-		<swagger-annotations.version>2.1.12</swagger-annotations.version>
-		<springdoc-openapi-ui.version>1.6.3</springdoc-openapi-ui.version>
-		<com.cloudinary.version>1.30.0</com.cloudinary.version>
-		<greenmail-junit5.version>1.6.6</greenmail-junit5.version>
-		<org.awaitility.version>4.1.1</org.awaitility.version>
+		<swagger-annotations.version>2.2.22</swagger-annotations.version>
+		<springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
+		<com.cloudinary.version>1.39.0</com.cloudinary.version>
+		<greenmail-junit5.version>2.1.0-rc-1</greenmail-junit5.version>
+		<org.awaitility.version>4.2.2</org.awaitility.version>
 
 		<!-- Plugins properties -->
-		<flyway-maven-plugin.version>8.4.2</flyway-maven-plugin.version>
-		<flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-		<maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
-		<springdoc-openapi-maven-plugin.version>1.3</springdoc-openapi-maven-plugin.version>
+		<flyway-maven-plugin.version>10.18.0</flyway-maven-plugin.version>
+		<flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
+		<maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
+		<maven-failsafe-plugin.version>3.5.0</maven-failsafe-plugin.version>
+		<springdoc-openapi-maven-plugin.version>1.4</springdoc-openapi-maven-plugin.version>
 	</properties>
 
 	<dependencies>
